--- a/part 1/backend/package.json
+++ b/part 1/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js"
   },
-  "author": "Emmann",
+  "author": "Aditya",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
